cmake_minimum_required(VERSION 3.31)
project(Graph_Problems)

set(CMAKE_CXX_STANDARD 20)

add_executable(Graph_Problems "542. 01 Matrix.cpp"
        "752. Open the Lock.cpp"
        "841. Keys and Rooms.cpp"
        "1091. Shortest Path in Binary Matrix.cpp"
        "1765. Map of Highest Peak .cpp"
        "1162. As Far from Land as Possible.cpp"
        "863. All Nodes Distance K in Binary Tree.cpp"
        "1926. Nearest Exit from Entrance in Maze.cpp"
        "909. Snakes and Ladders.cpp"
        "994. Rotting Oranges.cpp"
        "690. Employee Importance.cpp"
        "1315. Sum of Nodes with Even-Valued Grandparent.cpp"
        "547. Number of Provinces.cpp"
        "695. Max Area of Island.cpp"
        "399. Evaluate Division.cpp"
        "129. Sum Root to Leaf Numbers.cpp"
        "130. Surrounded Regions.cpp"
        "2101. Detonate the Maximum Bombs.cpp"
        "529. Minesweeper.cpp"
        "1123. Lowest Common Ancestor of Deepest Leaves.cpp"
        "99. Recover Binary Search Tree.cpp"
        "1391. Check if There is a Valid Path in a Grid.cpp"
        "818. Race Car.cpp"
        "815. Bus Routes.cpp"
        "127. Word Ladder.cpp")
